objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>PriorYearPotentialUsers__c</fullName>
        <description>SFDC1-7847: Text field for displaying potential users information during prior year</description>
        <inlineHelpText>Prior Year Potential Users</inlineHelpText>
        <label>Prior Year Potential Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearQuantity__c</fullName>
        <description>SFDC1-370 to be populated by SAP integration</description>
        <inlineHelpText>Prior year contracted quantity for the product</inlineHelpText>
        <label>Prior Year Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalDiscountAmt__c</fullName>
        <description>SFDC1-370 to be populated by SAP integration</description>
        <inlineHelpText>Populated from SAP integration</inlineHelpText>
        <label>Prior Year Total Discounted Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalSalesPrice__c</fullName>
        <description>SFDC1-370 to be populated by SAP integration</description>
        <inlineHelpText>Populated from SAP integration</inlineHelpText>
        <label>Prior Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearUnit__c</fullName>
        <description>SFDC1-370 Prior Year unit to be populated by SAP
SFDC1-7847: Re-labelled field to Prior Year List Unit Price</description>
        <inlineHelpText>Populated from SAP integration</inlineHelpText>
        <label>Prior Year List Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedDiscountAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-7082 the discount amount applied on pro-rated price</description>
        <inlineHelpText>Auto calculated based on discount</inlineHelpText>
        <label>Pro-Rated Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedPrice__c</fullName>
        <description>SFDC1-173 When the Opportunity is not for 12 months - need to calculate the Pro-Rated price automatically for the user based on Annualized Price.  Use SAP&apos;s 360 Calcualation. Calculation to follow with trigger/formula</description>
        <inlineHelpText>ProRated price based on SAP 360 day calculation</inlineHelpText>
        <label>ProRated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedTotalAmount__c</fullName>
        <description>SFDC1-7082 Pro rated amount auto-calculated</description>
        <formula>( ProRatedUnitPrice__c - ProRatedDiscountAmount__c )* Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pro-Rated total amount auto-calculated by system</inlineHelpText>
        <label>Pro-Rated Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedUnitPrice__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-7082 field calculated if user decides to pro-rate the</description>
        <inlineHelpText>Field auto calculated for field subscription pro-rated products</inlineHelpText>
        <label>Pro-Rated Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>SFDC - 1924 : This field will save the opportunities probability on Opportunity Probability.</description>
        <inlineHelpText>Product Probability</inlineHelpText>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProcessedContractNum__c</fullName>
        <description>SFDC1-7765: This field holds Processed Contract Number coming from SAP</description>
        <inlineHelpText>Once an Opportunity is closed won and processed by Order Management in SAP - a job will fill this field in with the Contract Number that was just added to SAP</inlineHelpText>
        <label>Processed Contract Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedSAPLineItem__c</fullName>
        <description>SFDC1-7765: This field holds Processed SAP Line Item coming from SAP</description>
        <inlineHelpText>Once an Opportunity is closed won and processed by Order Management in SAP - a job will fill this field in with the Line Item Number that was just created in SAP for this product</inlineHelpText>
        <label>Processed SAP Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1646 Product owner field to report upon individual product owners.</description>
        <inlineHelpText>Owner of the product</inlineHelpText>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>SFDC1-772 : This field will be populated from the &apos;AAG&apos; field of Product.</description>
        <formula>TEXT(PricebookEntry.Product2.ProfitCenters__r.SaleType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sale Type from the Profit Center on the Product Master</inlineHelpText>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedUnitPrice__c</fullName>
        <description>SFDC1-370 Proejected unit price to be populated by SAP integration</description>
        <inlineHelpText>Prior year list price + uplift - initiall price loaded into Updated List Price field when oppy is generated</inlineHelpText>
        <label>Projected Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCLostBiz__c</fullName>
        <description>SFDC1-7946 Reporting field for Upgrade and Downgrades
SFDC1-10928 update logic to use First Year Value instead of Updated List Price
SFDC-304 Include a check on Opportunity Stage containing &quot;6L&quot; (Lost)</description>
        <formula>IF(NOT(ISPICKVAL(Status__c  , &apos;Lost&apos;)) &amp;&amp; NOT(Contains(OpportunityStage__c, &apos;6L&apos;)),
  IF(PriorYearTotalSalesPrice__c &gt; FirstYear__c, PriorYearTotalSalesPrice__c - FirstYear__c, 0),
  PriorYearTotalSalesPrice__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting field for Upgrade and Downgrades</inlineHelpText>
        <label>Sales - Lost Bus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCLostPipe__c</fullName>
        <description>SFDC1-7946 Reporting field for Upgrade and Downgrades
SFDC1-10928 update logic to use First Year Value instead of Updated List Price
SFDC-304 Replace &quot;Pricing Ops List Unit Price&quot; with &quot;Recommended Unit Price&quot; in the formula, and include a check on Opportunity Stage containing &quot;6L&quot; (Lost)</description>
        <formula>IF ((RecommendedUnitPrice__c*Quantity)  &gt; PriorYearTotalSalesPrice__c &amp;&amp; (RecommendedUnitPrice__c*Quantity) &gt;= FirstYear__c, 
  IF (FirstYear__c &gt; PriorYearTotalSalesPrice__c &amp;&amp; NOT(ISPICKVAL(Status__c , &apos;Lost&apos;)) &amp;&amp; NOT(Contains(OpportunityStage__c, &apos;6L&apos;)), 
    (RecommendedUnitPrice__c*Quantity) - FirstYear__c,
    (RecommendedUnitPrice__c*Quantity)  - PriorYearTotalSalesPrice__c
  ), 
  IF (PriorYearTotalSalesPrice__c != 0 &amp;&amp; FirstYear__c &gt; PriorYearTotalSalesPrice__c &amp;&amp; (ISPICKVAL(Status__c , &apos;Lost&apos;) || Contains(OpportunityStage__c, &apos;6L&apos;)), 
    FirstYear__c - PriorYearTotalSalesPrice__c,
    IF (PriorYearTotalSalesPrice__c = 0 &amp;&amp; (ISPICKVAL(Status__c , &apos;Lost&apos;) || Contains(OpportunityStage__c, &apos;6L&apos;)),
      FirstYear__c, 
      0
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting field for Upgrade and Downgrades</inlineHelpText>
        <label>Sales - Lost Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCNew__c</fullName>
        <description>SFDC1-7946 Reporting field for Upgrade and Downgrades
SFDC1-10928 update logic to use First Year Value instead of Updated List Price
SFDC-304 Replace &quot;Pricing Ops List Unit Price&quot; with &quot;Recommended Unit Price&quot; in the formula, and include a check on Opportunity Stage containing &quot;6L&quot; (Lost)</description>
        <formula>IF(NOT(ISPICKVAL(Status__c , &apos;Lost&apos;)) &amp;&amp; NOT(Contains(OpportunityStage__c, &apos;6L&apos;)),
  IF(RecommendedUnitPrice__c != 0 &amp;&amp; FirstYear__c &gt; (RecommendedUnitPrice__c * Quantity) &amp;&amp; (RecommendedUnitPrice__c * Quantity) &gt;= PriorYearTotalSalesPrice__c, FirstYear__c - (RecommendedUnitPrice__c * Quantity),
  IF((RecommendedUnitPrice__c = 0 || (RecommendedUnitPrice__c * Quantity) &lt; PriorYearTotalSalesPrice__c) &amp;&amp; PriorYearTotalSalesPrice__c != 0 &amp;&amp; FirstYear__c &gt; PriorYearTotalSalesPrice__c, FirstYear__c - PriorYearTotalSalesPrice__c,
  IF(PriorYearTotalSalesPrice__c = 0, FirstYear__c, 0))),
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting field for Upgrade and Downgrades</inlineHelpText>
        <label>Sales - New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCPriceIncrease__c</fullName>
        <description>SFDC1-7946 Reporting field for Upgrade and Downgrades
SFDC1-10928 update logic to use First Year Value instead of Updated List Price
SFDC-304 Replace &quot;Pricing Ops List Unit Price&quot; with &quot;Recommended Unit Price&quot; in the formula, and include a check on Opportunity Stage containing &quot;6L&quot; (Lost)</description>
        <formula>IF ((RecommendedUnitPrice__c*Quantity) != 0 &amp;&amp; FirstYear__c &gt; PriorYearTotalSalesPrice__c &amp;&amp; (RecommendedUnitPrice__c*Quantity) &gt; PriorYearTotalSalesPrice__c &amp;&amp; NOT(ISPICKVAL(Status__c , &apos;Lost&apos;))  &amp;&amp; NOT(Contains(OpportunityStage__c, &apos;6L&apos;)), 
  IF ((RecommendedUnitPrice__c*Quantity) &gt; FirstYear__c, FirstYear__c - PriorYearTotalSalesPrice__c, (RecommendedUnitPrice__c*Quantity) - PriorYearTotalSalesPrice__c), 
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting field for Upgrade and Downgrades</inlineHelpText>
        <label>Sales - Price Incr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCRenewal__c</fullName>
        <description>SFDC1-7946 Reporting field for Upgrade and Downgrades
SFDC1-10928 update logic to use First Year Value instead of Updated List Price
SFDC-304 include a check on Opportunity Stage containing &quot;6L&quot; (Lost)</description>
        <formula>IF(NOT(ISPICKVAL(Status__c , &apos;Lost&apos;)) &amp;&amp; NOT(Contains(OpportunityStage__c, &apos;6L&apos;)),
  IF(FirstYear__c &lt; PriorYearTotalSalesPrice__c, FirstYear__c, PriorYearTotalSalesPrice__c),
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting field for Upgrade and Downgrades</inlineHelpText>
        <label>Sales - Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecommendedUnitPrice__c</fullName>
        <description>SFDC1-370 to be populated by SAP integration</description>
        <inlineHelpText>The recommended unit price is provided by Pricing Ops through the renewal process which is a target net unit price for the offering on the renewal</inlineHelpText>
        <label>Recommended Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RiskComments__c</fullName>
        <inlineHelpText>Hold comments related to risk on the product</inlineHelpText>
        <label>Risk Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskProbability__c</fullName>
        <inlineHelpText>Holds the product risk probability</inlineHelpText>
        <label>Risk Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RiskStatus__c</fullName>
        <inlineHelpText>Holds the status of the product risk</inlineHelpText>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Pending Resolution</fullName>
                </value>
                <value>
                    <fullName>Closed - Risk Mitigated</fullName>
                </value>
                <value>
                    <fullName>Closed - Non-Renewal</fullName>
                </value>
                <value>
                    <fullName>Closed - Downgraded</fullName>
                </value>
                <value>
                    <fullName>Closed – Downgraded</fullName>
                    <isActive>false</isActive>
                    <label>Closed – Downgraded</label>
                </value>
                <value>
                    <fullName>Closed – Non-Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Closed – Non-Renewal</label>
                </value>
                <value>
                    <fullName>Closed – Risk Mitigated</fullName>
                    <isActive>false</isActive>
                    <label>Closed – Risk Mitigated</label>
                </value>
                <value>
                    <fullName>Open – Pending Resolution</fullName>
                    <isActive>false</isActive>
                    <label>Open – Pending Resolution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPContractNumber__c</fullName>
        <description>SFDC-1523: Add a new field called “SAP Contract Number” on the Opportunity Product visible for all users to see</description>
        <inlineHelpText>Will be populated with the Contract Number automatically from SAP.</inlineHelpText>
        <label>SAP Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLineItem__c</fullName>
        <description>SFDC1-5206 SAP Line Item field for Opportunity Product</description>
        <inlineHelpText>Will be populated with the Line Item number from the SAP Contract - populated when Renewal is created, does not apply to new business</inlineHelpText>
        <label>SAP Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPPriceNote__c</fullName>
        <description>SFDC1-4976: This field holds SAP Price Updates</description>
        <inlineHelpText>SAP sends price updates to SF via integration. The pricing team will use this field to comment regarding the pricing provided</inlineHelpText>
        <label>SAP Price Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMEParts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-5765 Create a new Opportunity Team Role</description>
        <inlineHelpText>Product SME name</inlineHelpText>
        <label>SME-Parts</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityProduct2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1779 to indicate product SME name</description>
        <inlineHelpText>Product SME name</inlineHelpText>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityProduct1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesNewExpected__c</fullName>
        <description>SFDC-704 
Sales new multiplied by probability.</description>
        <formula>RCNew__c * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales new multiplied by probability.</inlineHelpText>
        <label>Sales-New (expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesNewPriceExpected__c</fullName>
        <description>SFDC-704. 
Sales New + Sales Price multiplied by the probability field.</description>
        <formula>( SalesNewPrice__c ) * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales New + Sales Price multiplied by the probability field.</inlineHelpText>
        <label>Sales-New&amp;Price (expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesNewPrice__c</fullName>
        <description>SFDC-704 
Sum of Sales New and Sales Price fields.</description>
        <formula>RCNew__c + RCPriceIncrease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Sales New and Sales Price fields.</inlineHelpText>
        <label>Sales-New&amp;Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesPriceIncrExpected__c</fullName>
        <description>SFDC-704. 
Sales Price Incr field multiplied by the probability.</description>
        <formula>RCPriceIncrease__c * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Price Incr field multiplied by the probability.</inlineHelpText>
        <label>Sales-Price Incr (expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesRenewalExpected__c</fullName>
        <description>SFDC-704. 
Sales Renewal multiplied by the probability.</description>
        <formula>RCRenewal__c * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Renewal multiplied by the probability.</inlineHelpText>
        <label>Sales-Renewal (expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceDeliveryDate__c</fullName>
        <description>SFDC-1819. 
Contains the Service Delivery date for the associated product.</description>
        <label>Service Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <label>Ship To : City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToClientName__c</fullName>
        <label>Ship To : Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCompanySAP__c</fullName>
        <label>Ship To : Company SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountryNew__c</fullName>
        <label>Ship To : Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToPostalZipCode__c</fullName>
        <label>Ship To : Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStateProvince__c</fullName>
        <label>Ship To : State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStreet__c</fullName>
        <label>Ship To : Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Is this an existing, add on, or removal of this product compared to the previous opportunity?</description>
        <inlineHelpText>Status for that opportunity product - New, Existing or Lost</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Add On</fullName>
                    <isActive>false</isActive>
                    <label>Add On</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Removal</fullName>
                    <isActive>false</isActive>
                    <label>Removal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsidyRoyaltyPassthroughPartner__c</fullName>
        <description>SFDC-3330: to indicate on oppy products that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Subsidy/Royalty/Passthrough Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron</fullName>
                </value>
                <value>
                    <fullName>Continental Stock Transfer</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>NYSE</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Global</fullName>
                </value>
                <value>
                    <fullName>TSX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsidyRoyaltyPassthroughType__c</fullName>
        <description>SFDC-3330: to indicate on oppy products that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Subsidy/Royalty/Passthrough Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass-through</fullName>
                </value>
                <value>
                    <fullName>Royalty</fullName>
                </value>
                <value>
                    <fullName>Subsidy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SynergyTheme__c</fullName>
        <label>Synergy Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Expand MI Desktop</fullName>
                </value>
                <value>
                    <fullName>2. Data Distribution</fullName>
                </value>
                <value>
                    <fullName>3. Private Markets</fullName>
                </value>
                <value>
                    <fullName>4. Corporates</fullName>
                </value>
                <value>
                    <fullName>5. Risk &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>6. Research and Advisory</fullName>
                </value>
                <value>
                    <fullName>9. Wealth Management and Retail Investing</fullName>
                </value>
                <value>
                    <fullName>PD - Expand EWB</fullName>
                </value>
                <value>
                    <fullName>PD - Other</fullName>
                </value>
                <value>
                    <fullName>TRANS - pending 1</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Energy Transition</fullName>
                </value>
                <value>
                    <fullName>Financials Expansion</fullName>
                </value>
                <value>
                    <fullName>Insights to Pricing Solution</fullName>
                </value>
                <value>
                    <fullName>Non Energy Commodities Penetration</fullName>
                </value>
                <value>
                    <fullName>Technology, Data &amp; Platforms</fullName>
                </value>
                <value>
                    <fullName>Auto Data Expansion</fullName>
                </value>
                <value>
                    <fullName>10. M&amp;T</fullName>
                </value>
                <value>
                    <fullName>8. APAC Other</fullName>
                </value>
                <value>
                    <fullName>6. Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>7. ESG &amp; Climate</fullName>
                </value>
                <value>
                    <fullName>12. Digital</fullName>
                </value>
                <value>
                    <fullName>11. Investment Management</fullName>
                </value>
                <value>
                    <fullName>10. EDM</fullName>
                </value>
                <value>
                    <fullName>11.Unassigned</fullName>
                    <isActive>false</isActive>
                    <label>11.Unassigned</label>
                </value>
                <value>
                    <fullName>8. APAC</fullName>
                    <isActive>false</isActive>
                    <label>8. APAC</label>
                </value>
                <value>
                    <fullName>99.Unassigned</fullName>
                    <isActive>false</isActive>
                    <label>99.Unassigned</label>
                </value>
                <value>
                    <fullName>Non-Energy Commodities Penetration</fullName>
                    <isActive>false</isActive>
                    <label>Non-Energy Commodities Penetration</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SynergyType__c</fullName>
        <label>Synergy Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SynergyTheme__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.1 Cross sell FS Issuance solutions Book Building products</fullName>
                </value>
                <value>
                    <fullName>1.2 Cross sell FS BRST data to MI clients</fullName>
                </value>
                <value>
                    <fullName>1.3 FS Issuance to MI clients</fullName>
                </value>
                <value>
                    <fullName>3 FS PVR, Equities Info and Private Vals to MI clients</fullName>
                </value>
                <value>
                    <fullName>7.1 FS Notice Manager, Private Markets, WSO, and Debt Domain to MI clients</fullName>
                </value>
                <value>
                    <fullName>7.2 FS Notice Manager, Private Markets, WSO, and Debt Domain to MI clients</fullName>
                </value>
                <value>
                    <fullName>7.3 FS Notice Manager, Private Markets, WSO, and Debt Domain to MI clients</fullName>
                </value>
                <value>
                    <fullName>10.1 FS Issuer services solutions to MI clients</fullName>
                </value>
                <value>
                    <fullName>10.2 FS Issuer services solutions to MI clients</fullName>
                </value>
                <value>
                    <fullName>13. FS KYC to MI IB, IM, and CB clients</fullName>
                </value>
                <value>
                    <fullName>14. FS KY3P to MI clients</fullName>
                </value>
                <value>
                    <fullName>19.2 Cross sell ECR Supply Chain data to MI clients</fullName>
                </value>
                <value>
                    <fullName>20. FS cross sell ECR PMI to MI clients</fullName>
                </value>
                <value>
                    <fullName>21. FS ECR content to MI clients</fullName>
                </value>
                <value>
                    <fullName>24. FS Markit Digital to MI DMS customers</fullName>
                </value>
                <value>
                    <fullName>Engineering Workbench to Platts Customers</fullName>
                </value>
                <value>
                    <fullName>PD - Other</fullName>
                </value>
                <value>
                    <fullName>P/R Cons Chemicals - Cross Sell #75</fullName>
                </value>
                <value>
                    <fullName>P/R Cons Power consulting - Cross Sell #76</fullName>
                </value>
                <value>
                    <fullName>P/R Cons Agri &amp; OMD consulting - Cross Sell #77</fullName>
                </value>
                <value>
                    <fullName>P/R Cons Financials - Cross Sell #80</fullName>
                </value>
                <value>
                    <fullName>P/R ET CSM &amp; Climate Scenarios - Cross Sell #11</fullName>
                </value>
                <value>
                    <fullName>P/R ET Mobility &amp; energy futures - Cross Sell #45</fullName>
                </value>
                <value>
                    <fullName>P/R ET Clean Energy Tech &amp; hydrogen - Cross Sell #70</fullName>
                </value>
                <value>
                    <fullName>P/R ET Corporate Emissions Solutions - Cross Sell #70.2</fullName>
                </value>
                <value>
                    <fullName>P/R ET EnergyView Climate/Energy Adv - Cross Sell #71</fullName>
                </value>
                <value>
                    <fullName>P/R FE Upstream to financials - Cross Sell #23</fullName>
                </value>
                <value>
                    <fullName>P/R ITP Crude News &amp;  Analytics - Cross Sell #22</fullName>
                </value>
                <value>
                    <fullName>P/R ITP Waterborne LPG - Cross Sell #41</fullName>
                </value>
                <value>
                    <fullName>P/R ITP Carve out R&amp;M Market Profiles - Cross Sell #44</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxCountry__c</fullName>
        <description>SFDC1-215. Contains the Tax Country field pulled in from the product. Complies with the US Supreme Court Wayfair Decision and Tax Reform Act effective Jan. 1, 2019.</description>
        <formula>PricebookEntry.Product2.TaxCountry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Complies with the US Supreme Court Wayfair Decision and Tax Reform Act effective Jan. 1, 2019.</inlineHelpText>
        <label>Tax Country/Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalDiscountValue__c</fullName>
        <description>SFDC1-173 This denotes the total discount.</description>
        <formula>(UnitListPrice__c -Discount_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated List Price with the Discount Amount or Discount % applied</inlineHelpText>
        <label>Discounted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitListPrice__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>SFDC1-173 Currency field that displays the intial value pre discount as entered by the rep</description>
        <inlineHelpText>List Price for the product populated by sales from pricing tools or through renewal process</inlineHelpText>
        <label>Updated List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeightedValueatRisk__c</fullName>
        <formula>EstimatedValueatRisk__c  *  RiskProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Value at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>